--- a/NLP_sentiment_analysis.ipynb
+++ b/NLP_sentiment_analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,10 +17,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
+    "#textlob megoldás\n",
     "def sentiment_analysis(filename=\"comments.json\", output_filename=\"sentiment_results.json\"):\n",
     "    try:\n",
     "        with open(filename, \"r\", encoding=\"utf-8\") as f:\n",
