re added lost rule based bot detection

--- a/research/bot_detection.ipynb
+++ b/research/bot_detection.ipynb
@@ -103,6 +103,128 @@
     }
    ],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import re\n",
+    "from collections import Counter\n",
+    "import nltk\n",
+    "from nltk.corpus import stopwords\n",
+    "\n",
+    "def split_sentences(text: str):\n",
+    "    sents = re.split(r'(?<=[.!?])\\s+', text.strip())\n",
+    "    return [s for s in sents if s]\n",
+    "\n",
+    "def tokenize(text: str):\n",
+    "    return re.findall(r\"\\b\\w+\\b\", text.lower(), flags=re.UNICODE)\n",
+    "\n",
+    "def ngram_counts(tokens, n=3):\n",
+    "    return Counter(tuple(tokens[i:i+n]) for i in range(len(tokens)-n+1))\n",
+    "\n",
+    "def burstiness(sentences):\n",
+    "    lens = [len(tokenize(s)) for s in sentences]\n",
+    "    if not lens:\n",
+    "        return 0.0\n",
+    "    mean = sum(lens)/len(lens)\n",
+    "    if mean == 0:\n",
+    "        return 0.0\n",
+    "    var = sum((x-mean)**2 for x in lens)/len(lens)\n",
+    "    std = var**0.5\n",
+    "    return std/mean\n",
+    "\n",
+    "def type_token_ratio(tokens):\n",
+    "    return len(set(tokens)) / max(1, len(tokens))\n",
+    "\n",
+    "def stopword_ratio(tokens, lang='hungarian'):\n",
+    "    try:\n",
+    "        sw = set(stopwords.words(lang))\n",
+    "    except LookupError:\n",
+    "        sw = set()\n",
+    "    if not tokens:\n",
+    "        return 0.0\n",
+    "    return sum(1 for t in tokens if t in sw) / len(tokens)\n",
+    "\n",
+    "def punctuation_ratio(text):\n",
+    "    punct = re.findall(r\"[^\\w\\s]\", text, flags=re.UNICODE)\n",
+    "    return len(punct) / max(1, len(text))\n",
+    "\n",
+    "CUES_HU = [\n",
+    "    \"mint mesterséges intelligencia\",\n",
+    "    \"mint nyelvi modell\",\n",
+    "    \"nincs hozzáférésem\",\n",
+    "    \"nem tudok valós időben böngészni\",\n",
+    "    \"nem vagyok jogi tanácsadó\",\n",
+    "    \"nem tudok személyes véleményt adni\",\n",
+    "]\n",
+    "\n",
+    "TRANSITIONS_HU = [\"azonban\", \"ugyanakkor\", \"továbbá\", \"összességében\", \"mindazonáltal\", \"emellett\"]\n",
+    "\n",
+    "def transition_ratio(tokens):\n",
+    "    trans = set(TRANSITIONS_HU)\n",
+    "    if not tokens:\n",
+    "        return 0.0\n",
+    "    return sum(1 for t in tokens if t in trans) / len(tokens)\n",
+    "\n",
+    "def analyze(text: str):\n",
+    "    sents = split_sentences(text)\n",
+    "    tokens = tokenize(text)\n",
+    "    ttr = type_token_ratio(tokens)\n",
+    "    br = burstiness(sents)\n",
+    "    swr = stopword_ratio(tokens)\n",
+    "    pr = punctuation_ratio(text)\n",
+    "    tr = transition_ratio(tokens)\n",
+    "    ng3 = ngram_counts(tokens, 3)\n",
+    "    max3 = max(ng3.values()) if ng3 else 0\n",
+    "    cliche = any(phrase in text.lower() for phrase in CUES_HU)\n",
+    "    return {\n",
+    "        \"length_chars\": len(text),\n",
+    "        \"length_tokens\": len(tokens),\n",
+    "        \"avg_sent_len\": sum(len(tokenize(s)) for s in sents) / max(1, len(sents)),\n",
+    "        \"burstiness\": br,\n",
+    "        \"ttr\": ttr,\n",
+    "        \"stopword_ratio\": swr,\n",
+    "        \"punct_ratio\": pr,\n",
+    "        \"transition_ratio\": tr,\n",
+    "        \"max_3gram_freq\": max3,\n",
+    "        \"ai_template_phrase\": cliche,\n",
+    "    }\n",
+    "\n",
+    "def rule_based_decision(metrics: dict):\n",
+    "    score = 0\n",
+    "    reasons = []\n",
+    "    if metrics[\"ai_template_phrase\"]:\n",
+    "        reasons.append(\"AI-sablon kifejezés\")\n",
+    "        score += 2\n",
+    "    if metrics[\"length_tokens\"] >= 150 and metrics[\"burstiness\"] <= 0.35:\n",
+    "        reasons.append(\"Alacsony burstiness hosszú szövegnél\")\n",
+    "        score += 1\n",
+    "    if metrics[\"max_3gram_freq\"] >= 4:\n",
+    "        reasons.append(\"Gyakori 3‑gram ismétlődés\")\n",
+    "        score += 1\n",
+    "    if metrics[\"ttr\"] <= 0.35:\n",
+    "        reasons.append(\"Alacsony TTR\")\n",
+    "        score += 1\n",
+    "    if metrics[\"transition_ratio\"] >= 0.05:\n",
+    "        reasons.append(\"Sok kötő/frázis szó\")\n",
+    "        score += 1\n",
+    "    label = \"valószínű AI/bot\" if score >= 3 else \"inkább emberi vagy bizonytalan\"\n",
+    "    return label, reasons, score\n",
+    "\n",
+    "if __name__ == \"__main__\":\n",
+    "    try:\n",
+    "        nltk.data.find('corpora/stopwords')\n",
+    "    except LookupError:\n",
+    "        nltk.download('stopwords')\n",
+    "    txt = \"Ide illeszd a vizsgálandó szöveget.\"\n",
+    "    m = analyze(txt)\n",
+    "    label, reasons, score = rule_based_decision(m)\n",
+    "    print(m)\n",
+    "    print(label, reasons, score)\n"
+   ]
   }
  ],
  "metadata": {
