--- a/research/test.ipynb
+++ b/research/test.ipynb
@@ -146,11 +146,80 @@
    "source": [
     "remove_emojis(asd)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "3a60b03d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "100\n",
+      "30\n",
+      "35\n",
+      "35\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\Bence\\AppData\\Local\\Temp\\ipykernel_8748\\3362285782.py:5: FutureWarning: Series.__getitem__ treating keys as positions is deprecated. In a future version, integer keys will always be treated as labels (consistent with DataFrame behavior). To access a value by position, use `ser.iloc[pos]`\n",
+      "  print(df[df[\"Sentiment\"]==\"Positive\"].count()[0])\n",
+      "C:\\Users\\Bence\\AppData\\Local\\Temp\\ipykernel_8748\\3362285782.py:6: FutureWarning: Series.__getitem__ treating keys as positions is deprecated. In a future version, integer keys will always be treated as labels (consistent with DataFrame behavior). To access a value by position, use `ser.iloc[pos]`\n",
+      "  print(df[df[\"Sentiment\"]==\"Neutral\"].count()[0])\n",
+      "C:\\Users\\Bence\\AppData\\Local\\Temp\\ipykernel_8748\\3362285782.py:7: FutureWarning: Series.__getitem__ treating keys as positions is deprecated. In a future version, integer keys will always be treated as labels (consistent with DataFrame behavior). To access a value by position, use `ser.iloc[pos]`\n",
+      "  print(df[df[\"Sentiment\"]==\"Negative\"].count()[0])\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "df = pd.read_json(r\"C:\\Users\\Bence\\Documents\\GitHub\\Social-media-filter\\data\\ground_truth_new.json\")\n",
+    "print(df[\"Comment\"].count())\n",
+    "print(df[df[\"Sentiment\"]==\"Positive\"].count()[0])\n",
+    "print(df[df[\"Sentiment\"]==\"Neutral\"].count()[0])\n",
+    "print(df[df[\"Sentiment\"]==\"Negative\"].count()[0])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "138e880e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "52\n",
+      "48\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\Bence\\AppData\\Local\\Temp\\ipykernel_8748\\3232935974.py:1: FutureWarning: Series.__getitem__ treating keys as positions is deprecated. In a future version, integer keys will always be treated as labels (consistent with DataFrame behavior). To access a value by position, use `ser.iloc[pos]`\n",
+      "  print(df[df[\"Prediction\"]==\"bot\"].count()[0])\n",
+      "C:\\Users\\Bence\\AppData\\Local\\Temp\\ipykernel_8748\\3232935974.py:2: FutureWarning: Series.__getitem__ treating keys as positions is deprecated. In a future version, integer keys will always be treated as labels (consistent with DataFrame behavior). To access a value by position, use `ser.iloc[pos]`\n",
+      "  print(df[df[\"Prediction\"]==\"human\"].count()[0])\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(df[df[\"Prediction\"]==\"bot\"].count()[0])\n",
+    "print(df[df[\"Prediction\"]==\"human\"].count()[0])"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -164,7 +233,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
